{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 29,
  "lineage": "b96de36f-deb9-d77b-d994-ee1f5f701513",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fa45e8aad84a61c",
            "domain": "vpc",
            "id": "eipalloc-08fa45e8aad84a61c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-40-69.compute-1.amazonaws.com",
            "public_ip": "44.206.40.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "2024-Prod-revive-eip-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-eip-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0ced6a21099a9e2",
            "domain": "vpc",
            "id": "eipalloc-0d0ced6a21099a9e2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-226-203-170.compute-1.amazonaws.com",
            "public_ip": "54.226.203.170",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "2024-Prod-revive-eip-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-eip-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05efe9993d930cd43",
            "domain": "vpc",
            "id": "eipalloc-05efe9993d930cd43",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-93-92-63.compute-1.amazonaws.com",
            "public_ip": "3.93.92.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "2024-Prod-revive-eip-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-eip-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:internet-gateway/igw-0dc6c31d0a4944da4",
            "id": "igw-0dc6c31d0a4944da4",
            "owner_id": "462792239034",
            "tags": {
              "Name": "2024-Prod-revive-internet-gateway",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-internet-gateway",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fa45e8aad84a61c",
            "association_id": "eipassoc-07cfdcd39140b713d",
            "connectivity_type": "public",
            "id": "nat-0021dff49d04465e2",
            "network_interface_id": "eni-02fb848380b043dfa",
            "private_ip": "10.0.0.58",
            "public_ip": "44.206.40.69",
            "subnet_id": "subnet-097300845fe34b768",
            "tags": {
              "Name": "2024-Prod-revive-nat-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-nat-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0ced6a21099a9e2",
            "association_id": "eipassoc-04b2f20844a7f2326",
            "connectivity_type": "public",
            "id": "nat-02e292f537401929d",
            "network_interface_id": "eni-0781f1468d6dbc099",
            "private_ip": "10.0.1.58",
            "public_ip": "54.226.203.170",
            "subnet_id": "subnet-0199dec40150f980d",
            "tags": {
              "Name": "2024-Prod-revive-nat-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-nat-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05efe9993d930cd43",
            "association_id": "eipassoc-085dd5c15d8e87336",
            "connectivity_type": "public",
            "id": "nat-0b2891a3fd0f9628a",
            "network_interface_id": "eni-0a5b392adc0a6487f",
            "private_ip": "10.0.2.253",
            "public_ip": "3.93.92.63",
            "subnet_id": "subnet-074789ddf573a467a",
            "tags": {
              "Name": "2024-Prod-revive-nat-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-nat-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06799879ddfeabc051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0021dff49d04465e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06799879ddfeabc05",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07b0b0148ec88fc991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02e292f537401929d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07b0b0148ec88fc99",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04268e4f80982cf851080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b2891a3fd0f9628a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04268e4f80982cf85",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dc6c31d0a4944da4",
            "id": "r-rtb-06132c8a5c8297f661080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06132c8a5c8297f66",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:route-table/rtb-06799879ddfeabc05",
            "id": "rtb-06799879ddfeabc05",
            "owner_id": "462792239034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2024-Prod-revive-private-route-table-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-private-route-table-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:route-table/rtb-07b0b0148ec88fc99",
            "id": "rtb-07b0b0148ec88fc99",
            "owner_id": "462792239034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2024-Prod-revive-private-route-table-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-private-route-table-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:route-table/rtb-04268e4f80982cf85",
            "id": "rtb-04268e4f80982cf85",
            "owner_id": "462792239034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2024-Prod-revive-private-route-table-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-private-route-table-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:route-table/rtb-06132c8a5c8297f66",
            "id": "rtb-06132c8a5c8297f66",
            "owner_id": "462792239034",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "2024-Prod-revive-public-route-table",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-public-route-table",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f274b3b2ec537e4a",
            "route_table_id": "rtb-06799879ddfeabc05",
            "subnet_id": "subnet-071c6076436ded361"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9077fc29d2c76f8",
            "route_table_id": "rtb-07b0b0148ec88fc99",
            "subnet_id": "subnet-0bddbfc6e7b05294c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dc931015e848a71",
            "route_table_id": "rtb-04268e4f80982cf85",
            "subnet_id": "subnet-0c3bffbed744151c3"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a2a642e985ae52f",
            "route_table_id": "rtb-06132c8a5c8297f66",
            "subnet_id": "subnet-097300845fe34b768"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d61b2b9abd9a1b5",
            "route_table_id": "rtb-06132c8a5c8297f66",
            "subnet_id": "subnet-0199dec40150f980d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c744e2dcd7b5532",
            "route_table_id": "rtb-06132c8a5c8297f66",
            "subnet_id": "subnet-074789ddf573a467a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-071c6076436ded361",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071c6076436ded361",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2024-Prod-revive-private-subnet-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-private-subnet-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-0bddbfc6e7b05294c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bddbfc6e7b05294c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2024-Prod-revive-private-subnet-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-private-subnet-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-0c3bffbed744151c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3bffbed744151c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2024-Prod-revive-private-subnet-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-private-subnet-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-097300845fe34b768",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097300845fe34b768",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2024-Prod-revive-public-subnet-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-public-subnet-1-us-east-1a",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-0199dec40150f980d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0199dec40150f980d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2024-Prod-revive-public-subnet-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-public-subnet-2-us-east-1b",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:subnet/subnet-074789ddf573a467a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074789ddf573a467a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "462792239034",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "2024-Prod-revive-public-subnet-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-public-subnet-3-us-east-1c",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "kubernetes.io/cluster/2024-prod-revive": "shared",
              "kubernetes.io/role/elb": "1",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "vpc_id": "vpc-0e04fc6e8365716d7"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:462792239034:vpc/vpc-0e04fc6e8365716d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084190135bb999c09",
            "default_route_table_id": "rtb-0944acb9185d77fb6",
            "default_security_group_id": "sg-07acc5668a404dca1",
            "dhcp_options_id": "dopt-00cefed598a1a5681",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e04fc6e8365716d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0944acb9185d77fb6",
            "owner_id": "462792239034",
            "tags": {
              "Name": "2024-Prod-revive-vpc",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            },
            "tags_all": {
              "Name": "2024-Prod-revive-vpc",
              "cloud_provider": "aws",
              "create_by": "EK-TECH Solutions",
              "environment": "Prod",
              "id": "2024",
              "owner": "Devops Easy Learning",
              "project": "revive",
              "teams": "Phase-10-1"
            }
          }
        }
      ]
    }
  ]
}